--- a/src/components/aboutweb/content.css
+++ b/src/components/aboutweb/content.css
@@ -1,49 +1,44 @@
 .containerContent {
-    padding: 100px;
-    margin-right: 120px;
+    background-color: white;
 }
 
 .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 45px;
+    max-width: 1200px;
 }
 
 .content-right {
-    max-width: 500px;
-    margin-top: 5%;
-    flex: 1;
+    text-align: center;
 }
 
-.text-title {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
-}
+.content-images {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
 
-.text-content {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-}
-
-.btn {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1rem;
-}
+}   
 
 .img-content {
-    max-width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    flex: 1;
+    max-width: 400px;
+    margin-right: 20px;
+    background-color: transparent;
 }
 
 .img-content2 {
-    height: 300px;
-    flex: 1;
-    object-fit: cover;
-    margin-top: 20px;
+    max-width: 400px;
+}
+
+@media (max-width: 1366px) {
+    .content-right {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    
+    .content-images {
+        justify-content: center;
+    }
+    
+    .img-content, .img-content2 {
+        max-width: 300px;
+    }
 }
