--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,3 +1,11 @@
 *{
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
+
+.home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 1rem;
+}
+
